--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
-    "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.11",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "pug": "^2.0.4",
+    "querystring": "^0.2.0",
     "serve-favicon": "^2.5.0"
   }
 }
