--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.589.0",
+    "bcrypt": "^3.0.7",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -16,8 +18,12 @@
     "mongoose": "^5.7.11",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "querystring": "^0.2.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^3.3.3"
   }
 }
