--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "mongoose": "^5.7.11",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.1",
